--- a/package.json
+++ b/package.json
@@ -1,15 +1,25 @@
 {
-  "dependencies": {
-    "@11ty/eleventy": "^0.12.1",
-    "npm-run-all": "^4.1.5",
-    "sass": "^1.32.8"
+  "name": "web-components--forms",
+  "description": "Modern and accessible production ready form components.",
+  "version": "1.0.0",
+  "main": "gulpfile.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/derekrussell/web-components--disclosure.git"
   },
-  "scripts": {
-    "watch:sass": "sass --watch src/scss/:public/css",
-    "build:sass": "sass src/scss:public/css",
-    "watch:eleventy": "eleventy --serve",
-    "build:eleventy": "eleventy",
-    "start": "npm-run-all build:sass --parallel watch:*",
-    "build": "npm-run-all build:*"
+  "author": "Derek Russell",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/derekrussell/web-components--disclosure/issues"
+  },
+  "homepage": "https://github.com/derekrussell/web-components--disclosure#readme",
+  "dependencies": {
+    "sass": "^1.39.0"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.27.5",
+    "gulp": "^4.0.2",
+    "gulp-nunjucks-render": "^2.2.3",
+    "gulp-sass": "^5.0.0"
   }
 }
